--- a/manifest.json
+++ b/manifest.json
@@ -65,6 +65,17 @@
             "url": "https://github.com/caiogusto2/oracleapex/tree/main/your_viagens",
             "source": "https://raw.githubusercontent.com/caiogusto2/oracleapex/refs/heads/main/your_viagens/your.sql",
             "zip": "https://raw.githubusercontent.com/caiogusto2/oracleapex/refs/heads/main/your_viagens/your.zip"
-        }                
+        },
+        {
+            "internalName": "Caiu no Golpe",
+            "name": "Caiu no Golpe",
+            "description": "Aplicação desenvolvida para demonstração de como realizar uma investigação através do uso de grafos. Duas bases fictícias são utilizadas: financeira; e midias sociais;",
+            "author": "Caio Oliveira",
+            "version": "24.1.0",
+            "icon": "https://raw.githubusercontent.com/caiogusto2/oracleapex/refs/heads/main/caiunogolpe/golpe.png",
+            "url": "https://github.com/caiogusto2/oracleapex/tree/main/caiunogolpe",
+            "source": "https://raw.githubusercontent.com/caiogusto2/oracleapex/refs/heads/main/caiunogolpe/golpe.sql",
+            "zip": "https://raw.githubusercontent.com/caiogusto2/oracleapex/refs/heads/main/caiunogolpe/golpe.zip"
+        }                 
     ]
 }
