--- a/manifest.json
+++ b/manifest.json
@@ -142,6 +142,17 @@
             "url": "https://github.com/caiogusto2/oracleapex/tree/main/SelectAI",
             "source": "https://raw.githubusercontent.com/caiogusto2/oracleapex/refs/heads/main/SelectAI/selectai.sql",
             "zip": "https://raw.githubusercontent.com/caiogusto2/oracleapex/refs/heads/main/SelectAI/selectai.zip"
+        },
+        {
+            "internalName": "CMS - OCI + Select AI",
+            "name": "CMS - OCI + Select AI",
+            "description": "Aplicação desenvolvida para exemplificar o uso do APEX + Object storage como ferramenta de controle e gestão de arquivos + funcionalidade de select AI com RAG",
+            "author": "Caio Oliveira",
+            "version": "24.2.0",
+            "icon": "https://raw.githubusercontent.com/caiogusto2/oracleapex/refs/heads/main/CMS_OCI_SelectAI/cmsselectai.png",
+            "url": "https://github.com/caiogusto2/oracleapex/tree/main/CMS_OCI_SelectAI",
+            "source": "https://raw.githubusercontent.com/caiogusto2/oracleapex/refs/heads/main/CMS_OCI_SelectAI/cmsselectai.sql",
+            "zip": "https://raw.githubusercontent.com/caiogusto2/oracleapex/refs/heads/main/CMS_OCI_SelectAI/cmsselectai.zip"
         }                                         
     ]
 }
